# flux-theory

./: .gitignore  CITATION.cff  README.md
python/: README.md  pyproject.toml
python/src/flux/theory/: __init__.py
ruby/: .gitignore  CHANGES.md  README.md  flux-theory.gemspec
ruby/lib/flux/: theory.rb
ruby/lib/flux/theory/: block.rb  input.rb  output.rb  port.rb  system.rb
ruby/spec/: block_spec.rb  input_spec.rb  output_spec.rb  port_spec.rb  spec_helper.rb  system_spec.rb
rust/: CHANGES.md  Cargo.toml  README.md
rust/src/: lib.rs
